Deluge 1.1.1 - (In Development)
 Core:
  * Fix oldstateupgrader for those upgrading from 0.5.x
  * Fix setting Peer TOS byte

 GtkUI:
  * Fix opening links from Help menu and others
  * Fix remembering sorted column in the torrent list
  * Fix saving Files tab and Peers tab state
  * Disable popup notification in preferences on Windows
  * Fix crashing in AddTorrentDialog when removing torrents from the list
  * Do not allow duplicate torrents in the AddTorrentDialog
  * Fix translating speed units in status tab when a per-torrent limit is set
  * Fix torrents not displaying properly after disconnecting and reconnecting to the daemon
  * Fix when sorting # column, downloads should be on top

 Misc:
  * Fix bdecoding some torrent files
  * Fix the -l, --logfile option
  * Fix #729 tracker icons not being saved in the correct location
  * Add support for more tracker icons
  * Fix being able to connect to a local daemon from another user account

Deluge 1.1.0 - "Time gas!" (10 January 2009)
 Core:
  * Fix issue in get_tracker_host when the torrent has no tracker
  * Fix crash while trying to convert very old 0.5 config files

 GtkUI:
  * Fix translation setting in remove torrent dialog
  * Fix notification bug on startup for already finished torrents

 Ajaxui:
  * Fix loading on iPods.
  * Fix sorting on the name column.
  * Add "Not Implemented" alerts to some functions.
  * Improve the options tab on the Add Torrent dialog

 ConsoleUI:
  * Fix auto-complete feature for torrents.

 Misc:
  * Added '-s', '--set-default-ui' option to deluge

Deluge 1.1.0_RC3 (05 January 2009)
 Core:
  * Fix applying proxy settings
  * Fix the display of the tracker host when it's an IP address and not a hostname

 GtkUI:
  * Fix folder renaming to display the change properly
  * Fix seeding torrents from moving around when sorting the '#' column

 Plugins:
  * Label: Fix move on completed
  * Add 'PeerGuardian Text (GZip)' reader to the Blocklist plugin