@@ -45,6 +45,7 @@ void bind_session_settings()
         .def_readwrite("auto_scraped_interval", &session_settings::auto_scrape_interval)
         .def_readwrite("peer_tos", &session_settings::peer_tos)
         .def_readwrite("rate_limit_ip_overhead", &session_settings::rate_limit_ip_overhead)
+        .def_readwrite("outgoing_ports", &session_settings::outgoing_ports)
 #ifndef TORRENT_DISABLE_DHT
         .def_readwrite("use_dht_as_fallback", &session_settings::use_dht_as_fallback)
 #endif
