@@ -2,6 +2,7 @@ Deluge 1.1.1 - (In Development)
  Core:
   * Fix oldstateupgrader for those upgrading from 0.5.x
   * Fix setting Peer TOS byte
+  * Fix setting outgoing ports
 
  GtkUI:
   * Fix opening links from Help menu and others
